--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorControlActivated">@color/color_4b9fd5</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="dialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowIsFloating">true</item>
@@ -106,16 +106,16 @@
 
 
     <declare-styleable name="ShadowLayout">
-        <attr name="sl_cornerRadius" format="dimension" />
-        <attr name="sl_shadowRadius" format="dimension" />
-        <attr name="sl_shadowColor" format="color" />
-        <attr name="sl_dx" format="dimension" />
-        <attr name="sl_dy" format="dimension" />
+        <attr name="sl_cornerRadius" format="dimension"/>
+        <attr name="sl_shadowRadius" format="dimension"/>
+        <attr name="sl_shadowColor" format="color"/>
+        <attr name="sl_dx" format="dimension"/>
+        <attr name="sl_dy" format="dimension"/>
     </declare-styleable>
 
 
     <declare-styleable name="LoginButton">
-        <attr name="lb_stroke_color" format="color" />
+        <attr name="lb_stroke_color" format="color"/>
     </declare-styleable>
 
     <style name="BlurDialogFragment.Default.Animation" parent="@android:style/Animation.Activity">
@@ -142,7 +142,7 @@
         <item name="android:background">@null</item>
     </style>
 
-    <style name="CamActivityTheme" parent="AppTheme" />
+    <style name="CamActivityTheme" parent="AppTheme"/>
     <!-- 设备信息item样式 -->
     <style name="information_item">
         <item name="android:layout_width">match_parent</item>
@@ -170,7 +170,7 @@
         <item name="android:paddingBottom">4dp</item>
     </style>
 
-    <style name="MediaActivityTransition" parent="AppTheme" />
+    <style name="MediaActivityTransition" parent="AppTheme"/>
 
 
     <!-- 云相框弹出框动画 由下至上 -->
@@ -221,4 +221,193 @@
             @style/TextAppearance.StatusBar.EventContent.Info
         </item>
     </style>
+
+    <style name="video_more_dialog">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <!--MediaActivity Style-->
+    <style name="video_opt_container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="video_opt_play">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">9dp</item>
+        <item name="android:layout_marginRight">14dp</item>
+        <item name="android:src">@drawable/video_opt_pause_drawable</item>
+    </style>
+
+    <style name="video_opt_full_screen">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">14dp</item>
+        <item name="android:layout_marginRight">13dp</item>
+        <item name="android:src">@drawable/icon_full_screen</item>
+    </style>
+
+    <style name="video_opt_seek_bar">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="video_opt_play_time">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">#CCCCCC</item>
+        <item name="android:layout_marginRight">9dp</item>
+        <item name="android:enabled">false</item>
+        <item name="android:clickable">false</item>
+    </style>
+
+    <style name="video_opt_total_time">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">#CCCCCC</item>
+        <item name="android:layout_marginLeft">9dp</item>
+        <item name="android:enabled">false</item>
+        <item name="android:clickable">false</item>
+    </style>
+
+    <style name="video_opt_more">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginRight">9dp</item>
+        <item name="android:src">@drawable/icon_more</item>
+        <item name="android:visibility">visible</item>
+    </style>
+
+    <style name="video_header_container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:background">#000000</item>
+        <item name="android:alpha">0.5</item>
+    </style>
+
+    <style name="video_header_back">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/btn_login_nav_close</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:layout_centerVertical">true</item>
+
+    </style>
+
+    <style name="video_header_opt_container">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="video_header_opt_delete">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/landscape_icon_delete</item>
+        <item name="android:layout_marginRight">27dp</item>
+    </style>
+
+    <style name="video_header_opt_download">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/landscape_icon_down</item>
+        <item name="android:layout_marginRight">27dp</item>
+    </style>
+
+    <style name="video_header_opt_share">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/landscape_icon_share</item>
+        <item name="android:layout_marginRight">18dp</item>
+    </style>
+
+    <style name="video_header_title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="picture_opt_download">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">left|center_vertical</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:src">@drawable/icon_download</item>
+    </style>
+
+    <style name="picture_opt_share">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/icon_share</item>
+        <item name="android:layout_gravity">center|center_vertical</item>
+        <item name="android:layout_marginLeft">101dp</item>
+        <item name="android:layout_marginRight">101dp</item>
+    </style>
+
+    <style name="picture_opt_collection">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/icon_collection</item>
+        <item name="android:layout_gravity">right|center_vertical</item>
+        <item name="android:layout_marginRight">40dp</item>
+    </style>
+
+    <style name="video_opt_play_land">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">21dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:src">@drawable/landscape_btn_pause</item>
+    </style>
+
+    <style name="video_opt_full_screen_land">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">21dp</item>
+        <item name="android:src">@drawable/landscape_icon_screen</item>
+    </style>
+
+    <style name="video_opt_seek_bar_land">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="video_opt_play_time_land">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">#CCCCCC</item>
+        <item name="android:layout_marginRight">9dp</item>
+    </style>
+
+    <style name="video_opt_total_time_land">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">#CCCCCC</item>
+        <item name="android:layout_marginLeft">9dp</item>
+    </style>
+
+    <style name="video_opt_container_land">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <item name="video_opt_play_drawable" type="drawable">@drawable/icon_play</item>
+    <item name="video_opt_pause_drawable" type="drawable">@drawable/icon_suspend</item>
 </resources>
