--- a/app/src/main/res/layout/layout_fragment_media_pic_details.xml
+++ b/app/src/main/res/layout/layout_fragment_media_pic_details.xml
@@ -1,14 +1,49 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    tools:ignore="ContentDescription">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_gravity="center"
+             tools:ignore="ContentDescription">
 
     <com.cylan.photoview.PhotoView
         android:id="@+id/details_album_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"/>
+
+    <FrameLayout
+        android:id="@+id/fLayout_details_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:transitionGroup="true"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/imgV_big_pic_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:padding="15dp"
+            android:src="@drawable/icon_download"/>
+
+        <ImageView
+            android:id="@+id/imgV_big_pic_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="25dp"
+            android:padding="15dp"
+            android:src="@drawable/icon_share"/>
+
+        <ImageView
+            android:id="@+id/imgV_big_pic_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_margin="25dp"
+            android:padding="15dp"
+            android:src="@drawable/icon_collection"/>
+    </FrameLayout>
 </FrameLayout>
