--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -102,4 +102,14 @@
     <dimen name="min_panel_height">220dp</dimen>
     <dimen name="max_panel_height">380dp</dimen>
     <dimen name="min_keyboard_height">80dp</dimen>
+
+
+    <!--MediaActivity -->
+    <dimen name="video_footer_height">60dp</dimen>
+    <dimen name="video_option_full_screen_margin_left">14dp</dimen>
+    <dimen name="video_option_full_screen_margin_right">13dp</dimen>
+    <dimen name="video_option_play_margin_left">9dp</dimen>
+    <dimen name="video_option_play_margin_right">14dp</dimen>
+
+    <dimen name="video_pager_page_margin">4dp</dimen>
 </resources>
