--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -30,6 +30,10 @@
     <!--hunt:progress_stroke_color="@color/color_cecece"/>-->
     <!--</com.cylan.jiafeigou.widget.ShadowFrameLayout>-->
 
+    <SurfaceView
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/act_media_pager"
         android:layout_width="match_parent"
