--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
 
     <color name="color_f1f1f1">#F1F1F1</color>
     <color name="color_d2d2d2">#D2D2D2</color>
+    <color name="color_DDDDDD">#DDDDDD</color>
     <color name="color_dde0e5">#DDE0E5</color>
     <color name="color_d8d8d8">#D8D8D8</color>
     <color name="color_f9f9f9">#F9F9F9</color>
