--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -104,10 +104,11 @@
     </declare-styleable>
 
     <declare-styleable name="SimpleProgressStyle">
-        <attr name="progress_stroke_width" format="dimension"/>
-        <attr name="progress_stroke_color" format="reference|color"/>
-        <attr name="progress_point_radius" format="dimension"/>
-        <attr name="progress_swipe_degree" format="integer"/>
+        <attr name="progress_stroke_width" format="dimension" />
+        <attr name="progress_stroke_color" format="reference|color" />
+        <attr name="progress_point_radius" format="dimension" />
+        <attr name="progress_swipe_degree" format="integer" />
+        <attr name="progress_radius" format="dimension" />
     </declare-styleable>
     <declare-styleable name="SettingItemViewStyle">
         <attr name="sv_title" format="string|reference" />
