--- a/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
@@ -49,7 +49,7 @@
             />
 
         <RelativeLayout
-            android:visibility="invisible"
+            android:visibility="gone"
             android:id="@+id/rl_send_pro_hint"
             android:layout_marginTop="120dp"
             android:layout_gravity="center_horizontal"
