--- a/app/src/main/res/layout/dialog_delay_record_time_interval.xml
+++ b/app/src/main/res/layout/dialog_delay_record_time_interval.xml
@@ -21,11 +21,13 @@
             android:textSize="16sp"/>
 
         <RadioGroup
+            android:id="@+id/dialog_record_rg_option"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
 
             <RadioButton
+                android:id="@+id/dialog_record_rb_20s"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
@@ -35,6 +37,7 @@
                 android:text="20s"/>
 
             <RadioButton
+                android:id="@+id/dialog_record_rb_60s"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@null"
@@ -43,11 +46,11 @@
                 android:text="60s"/>
         </RadioGroup>
 
-        <Button
+        <TextView
+            android:id="@+id/dialog_record_time_interval_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@null"
             android:text="取消"
             android:textColor="#4B9FD5"
             android:textSize="14sp"/>
