--- a/app/src/main/res/layout/fragment_cloud_live_setting.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_setting.xml
@@ -102,7 +102,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="清空消息记录"
+                android:text="@string/Tap1_iHome_ClearRecord"
                 android:textColor="@color/color_black"
                 android:textSize="16sp" />
 
