--- a/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
@@ -61,7 +61,7 @@
 
             <TextView
                 android:layout_marginTop="16dp"
-                android:text="暂无联系人"
+                android:text="@string/Tap3_FriendsAdd_NoContacts"
                 android:textColor="#aaaaaa"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
